# vexy-mkdocs-markdown-in-template

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
mkdocs_markdown_in_template_plugin/: __init__.py
